tests/baselines/reference/internalAliasEnumInsideLocalModuleWithoutExportAccessError.errors.txt
internalAliasEnumInsideLocalModuleWithoutExportAccessError.ts(14,21): error TS2339: Property 'b' does not exist on type 'typeof c'.


==== internalAliasEnumInsideLocalModuleWithoutExportAccessError.ts (1 errors) ====
    export namespace a {
        export enum weekend {
            Friday,
            Saturday,
            Sunday
        }
    }
    
    export namespace c {
        import b = a.weekend;
        export var bVal: b = b.Sunday;
    }
    
    var happyFriday = c.b.Friday;
                        ~
!!! error TS2339: Property 'b' does not exist on type 'typeof c'.